--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(src/)
 #gtest_discover_tests(test_reader TEST_PREFIX new:)
 
 add_executable(test_writer test_writer.cpp ${PROJECT_SOURCE_DIR}/src/writer.cpp)
-target_link_libraries(test_writer GTest::GTest ${OpenCV_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES})
+target_link_libraries(test_writer GTest::GTest ${OpenCV_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${OpenCV_LIBRARIES})
 gtest_discover_tests(test_writer TEST_PREFIX new:)
 
 #add_executable(test_toolbox test_toolbox.cpp)
