Added check for C++ filesystem
Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ find_package(CUDAToolkit REQUIRED)
 find_package(TIFF REQUIRED)
 find_package(NIFTI REQUIRED)
 find_package(OpenMP REQUIRED)
+find_package(Filesystem REQUIRED)
 
 # Add headers to project
 add_subdirectory(extern/CLI11)
@@ -78,7 +79,7 @@ set(HEADER
 add_library(PLImg SHARED ${SOURCE})
 target_link_libraries(PLImg ${OpenCV_LIBRARIES} CLI11::CLI11 ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${NIFTI_LIBRARIES}
         CUDA::cudart CUDA::nppidei CUDA::nppif CUDA::nppc CUDA::nppisu
-        OpenMP::OpenMP_CXX OpenMP::OpenMP_C)
+        OpenMP::OpenMP_CXX OpenMP::OpenMP_C std::filesystem)
 
 add_executable(PLIMaskGeneration PLImg.cpp)
 target_link_libraries(PLIMaskGeneration PLImg)
