--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,2 +1,4 @@
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
 INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/src/ @CMAKE_CURRENT_SOURCE_DIR@/docs
+PROJECT_NAME		   = PLImg
+PROJECT_BRIEF		   = "3D-Polarized Light Imaging Mask Generation: Generate masks and compute the inclination with this toolbox."
