--- a/bin/tools/CMakeLists.txt
+++ b/bin/tools/CMakeLists.txt
@@ -3,4 +3,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tools)
 
 # other tools like benchmarks
 add_executable(BlurredParameterTesting BlurredParameterTesting.cpp)
-target_link_libraries(BlurredParameterTesting PLImg)
+target_link_libraries(BlurredParameterTesting PLImig)
