Changed cuda error handling
Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,8 @@ set(HEADER
         toolbox.h
         writer.h
         version.h
-        cuda/toolbox.cuh)
+        cuda/cuda_toolbox.h
+        cuda/define.h)
 
 # Generate executable file
 add_library(PLImig SHARED ${SOURCE})
