Minimal example for own connected components algorithm.
Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/bin/tools/CMakeLists.txt
+++ b/bin/tools/CMakeLists.txt
@@ -8,3 +8,7 @@ target_link_libraries(BlurredParameterTesting PLImig)
 # other tools like benchmarks
 add_executable(RegionGrowingTesting RegionGrowingTesting.cpp)
 target_link_libraries(RegionGrowingTesting PLImig)
+
+# other tools like benchmarks
+add_executable(testConnectedComponentsImplementation testConnectedComponentsImplementation.cpp)
+target_link_libraries(testConnectedComponentsImplementation PLImig)
