Additional fixes for the program
Fixed memory issues because of missing boundries for the CUDA kernels.
Fixed issues due to no report of the max number calculated during the connected components algorithm

Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,5 +25,4 @@ set(HEADER
 # Generate executable file
 add_library(PLImig SHARED ${SOURCE})
 target_link_libraries(PLImig ${OpenCV_LIBRARIES} CLI11::CLI11 ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${NIFTI_LIBRARIES}
-        CUDA::cudart CUDA::nppidei CUDA::nppif CUDA::nppc CUDA::nppisu CUDA::nppist
-        OpenMP::OpenMP_CXX OpenMP::OpenMP_C std::filesystem ${PLIM_LIBRARIES})
+        CUDA::cudart OpenMP::OpenMP_CXX OpenMP::OpenMP_C std::filesystem ${PLIM_LIBRARIES})
