--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,11 +20,11 @@ target_link_libraries(test_writer GTest::GTest ${PLIM_LIBRARIES} ${OpenCV_LIBRAR
 gtest_discover_tests(test_writer TEST_PREFIX new:)
 
 add_executable(test_toolbox test_toolbox.cpp ${PROJECT_SOURCE_DIR}/src/toolbox.cpp ${PROJECT_SOURCE_DIR}/src/cuda/cuda_toolbox.cu)
-target_link_libraries(test_toolbox GTest::GTest ${OpenCV_LIBRARIES} CUDA::cudart CUDA::nppidei CUDA::nppif CUDA::nppc CUDA::nppisu CUDA::nppist OpenMP::OpenMP_CXX OpenMP::OpenMP_C)
+target_link_libraries(test_toolbox GTest::GTest ${OpenCV_LIBRARIES} CUDA::cudart OpenMP::OpenMP_CXX OpenMP::OpenMP_C)
 gtest_discover_tests(test_toolbox TEST_PREFIX new:)
 
 add_executable(test_maskgeneration test_maskgeneration.cpp ${PROJECT_SOURCE_DIR}/src/toolbox.cpp ${PROJECT_SOURCE_DIR}/src/maskgeneration.cpp ${PROJECT_SOURCE_DIR}/src/cuda/cuda_toolbox.cu)
-target_link_libraries(test_maskgeneration GTest::GTest ${OpenCV_LIBRARIES} CUDA::cudart CUDA::nppidei CUDA::nppif CUDA::nppc CUDA::nppisu CUDA::nppist OpenMP::OpenMP_CXX OpenMP::OpenMP_C)
+target_link_libraries(test_maskgeneration GTest::GTest ${OpenCV_LIBRARIES} CUDA::cudart OpenMP::OpenMP_CXX OpenMP::OpenMP_C)
 gtest_discover_tests(test_maskgeneration TEST_PREFIX new:)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
