Significant changes to CUDA kernels.
Optimization of histogram and connected components algorithms.
Connected Components is now calculated with union find algorithm.
This results in a significant speed-up in comparison to the naive version.

Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.14)
 project(PLImig LANGUAGES C CXX CUDA VERSION 1.1.0)
 
 # Set a default build type if none was specified
-set(default_build_type "Release")
+set(default_build_type "Debug")
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
