Changed method for counting non zero pixels because OpenCV cannot handle large files
There isn't a performance penalty as long as the "Release" configuration is used.

Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(PLImigPipeline PLImig.cpp)
 target_link_libraries(PLImigPipeline PLImig)
 
 add_executable(PLImigCheckResults CheckResults.cpp)
-target_link_libraries(PLImigCheckResults PLImig)
+target_link_libraries(PLImigCheckResults ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES})
 
 
 # install instructions for CMake
