Changed default build type to Release
Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.14)
 project(PLImig LANGUAGES C CXX CUDA VERSION 1.2.0)
 
 # Set a default build type if none was specified
-set(default_build_type "Debug")
+set(default_build_type "Release")
 # add_definitions(-DTIME_MEASUREMENT)
 
 
