Added exceptions for different GPU states to hopefully fix problems with GPU allocations
Signed-off-by: Jan André Reuter <jan.andre.reuter@hotmail.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCE
 
 # Set header files
 set(HEADER
+        exceptions.h
         inclination.h
         maskgeneration.h
         reader.h
