Further compability changes for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ find_package(OpenMP REQUIRED)
 find_package(Filesystem REQUIRED)
 if(WIN32)
     find_package(NIFTI CONFIG REQUIRED)
-    set(NIFTI_LIBRARIES NIFTI::znz)
+    set(NIFTI_LIBRARIES NIFTI::znz NIFTI::nifti2 NIFTI::niftiio NIFTI::nifticdf)
 else()
     find_package(NIFTI REQUIRED)
 endif(WIN32)
