Additional build fixes for Windows. Can now be fully build with additional fixes in PLIM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
 if(NOT DEFINED ${CMAKE_CUDA_ARCHITECTURES})
     set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75 80)
 endif()
@@ -73,6 +74,8 @@ add_subdirectory(bin)
 add_subdirectory(docs)
 
 if(BUILD_TESTING)
-   # enable_testing()
-   # add_subdirectory(tests)
+    if(NOT WIN32)
+       enable_testing()
+       add_subdirectory(tests)
+    endif()
 endif()
