--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,27 +3,32 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # Set source files
 set(SOURCE
-        inclination.cpp
-        maskgeneration.cpp
-        reader.cpp
-        toolbox.cpp
-        writer.cpp
-        version.cpp
-        cuda/cuda_toolbox.cu
-        cuda/cuda_kernels.cu)
+    inclination.cpp
+    maskgeneration.cpp
+    reader.cpp
+    toolbox.cpp
+    writer.cpp
+    version.cpp
+    cuda/cuda_toolbox.cu
+    cuda/cuda_kernels.cu
+    )
 
 # Set header files
 set(HEADER
-        exceptions.h
-        inclination.h
-        maskgeneration.h
-        reader.h
-        toolbox.h
-        writer.h
-        version.h
-        cuda/cuda_toolbox.h
-        cuda/cuda_kernels.h
-        cuda/define.h)
+    inclination.h
+    maskgeneration.h
+    reader.h
+    toolbox.h
+    writer.h
+    version.h
+    )
+
+set(CUDA_HEADER
+    cuda/exceptions.h
+    cuda/cuda_toolbox.h
+    cuda/cuda_kernels.h
+    cuda/define.h
+    )
 
 # Generate executable file
 if(WIN32)
@@ -38,4 +43,8 @@ target_link_libraries(PLImig ${OpenCV_LIBS} CLI11::CLI11 ${HDF5_CXX_LIBRARIES} $
 # install instructions for CMake
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     install(TARGETS PLImig LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ )
+    install(DIRECTORY DESTINATION include/PLImig)
+    install(FILES ${HEADER} DESTINATION include/PLImig PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+    install(DIRECTORY DESTINATION include/PLImig/cuda)
+    install(FILES ${CUDA_HEADER} DESTINATION include/PLImig/cuda PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
 endif()
